# Implicit-Joint-Semantic-Segmentation-of-Images-and-Point-Cloud

./: 1_get_orientations.py  2_Input_pointcloud.py  2_input_pointcloud.py  3_get_projected_img.py  4_cv.py  DSC04320.tif  Generation_depth_Img.py  README.md  README.txt  f_HPR.py  f_frustum_culling.py  f_get_orientations.py  f_get_synthetic_img.py  f_projection.py  frustum_culling.py  illustration.py  main.py  main3.py  main4.py  main5.py  myClasses.py  my_parameters.py  ps_prepareDATA.py  some notes  some notes.md  some notes2.md  statistics.py  test.py  utilities.py  visualization_graph.py  visualization_open3d.py  web bookmark
HPR_test/: MyHPR.py
SegNet-segmentation/: LoadBatches.py  LoadBatches_chip.py  chip.py  model.summary.txt  predict.py  test.py  train.py
SegNet-segmentation/Models/: Segnet.py  TernausNet.py  U-Net.py  __init__.py
SegNet-segmentation/data/: max.out  mean.out  min.out  sdv.out
SegNet-segmentation/pytorch_code/: my_functions.py
conda_env/: py2.yml  py3.yml
frustum_origin/: AABox.h  FrustumG.cpp  FrustumG.h  Vec3.cpp  Vec3.h  frustummain.dsp
keras_test/: test.py
point_splatting/: CMakeLists.txt  README.txt  render_views.cpp
point_splatting/include/: point_cloud_to_depth.h
point_splatting/src/: point_cloud_to_depth.cpp
semantic-segmentation/: LoadBatches.py  LoadBatches_multi_stream.py  chip.py  data_augmentation.py  evaluation.py  evaluation_record.txt  keras_data_augmentation.py  model_nadir.summary.txt  nohup.out  predict.py  predict_multi_stream.py  test.py  test2.py  train.py  train_multi_stream.py
semantic-segmentation/Models/: FCN32.py  FCN8.py  Segnet.py  UNet.py  VGG16_SegNet.py  __init__.py  testNet.py
semantic-segmentation/board/: events.out.tfevents.1545386570.ifpstud19
semantic-segmentation/board/0/: events.out.tfevents.1548325431.ifpstud19
semantic-segmentation/board/1/: events.out.tfevents.1550847243.ifpstud19
semantic-segmentation/board/12/: events.out.tfevents.1552915541.ifp12
semantic-segmentation/board/2/: events.out.tfevents.1552644418.ifpstud19
semantic-segmentation/board/3/: events.out.tfevents.1551366012.ifpstud19
semantic-segmentation/evl/: 0.txt  1.txt  10  10.txt  11.txt  2.txt  6  6.txt  7  7.txt  8  8.txt  9  evl_record_baseline1.txt  evl_record_baseline2.txt  evl_record_baseline3.txt  evl_record_baseline4.txt  important.txt
semantic-segmentation/weights/: record
src/: README.md  some notes.md
src/conda_env/: py2.yml  py3.yml
src/pre-processing/: Generation_depth_Img.py  main.py  main2.py  main3.py  main5.py  utilities.py  visualization_graph.py
src/semantic-segmentation/: LoadBatches.py  LoadBatches_multi_stream.py  evaluation.py  test2.py  train_multi_stream.py
version_playground/: chip.py  f_HPR.py  main.py
version_playground/SegNet-segmentation/: LoadBatches.py  model_view.txt
version_playground/frustum_origin/: AABox.cpp  Plane.cpp  Plane.h  frustummain.cpp  frustummain.dsw
version_playground/point_splatting/: CMakeLists.txt  render_views.cpp
version_playground/point_splatting/src/: point_cloud_to_depth.cpp
(+35 files in other folders)
